--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-mcp==1.9.2
-requests==2.31.0
-httpx==0.25.0
-pydantic==2.5.0
-uvicorn==0.24.0
-fastapi==0.104.0
-gunicorn==21.2.0
+fastapi>=0.100.0
+uvicorn[standard]>=0.23.0
+requests>=2.28.0
+pydantic>=2.0.0
+gunicorn>=20.0.0
